# youtube-scraper

./: .gitignore  README.md  pyproject.toml
tests/: test_youtube_scraper.py
youtube_scraper/: __init__.py  csv_update.py  globals.py  popular_videos.py  trending_videos.py  youtube_csv.py
