[tool.poetry]
name = "youtube-scraper"
version = "0.1.0"
description = ""
authors = ["Ed Jones <edjones1999@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
google-api-python-client = "^1.8.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
youtube-scraper = "youtube_scraper:main"